[gd_scene load_steps=5 format=3 uid="uid://c2tlrblo00eu6"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_rluci"]
[ext_resource type="PackedScene" uid="uid://dchbd6novsg0o" path="res://Bull/bull.tscn" id="2_54lbt"]
[ext_resource type="PackedScene" uid="uid://c7m1richxkw1d" path="res://World/world.tscn" id="3_24duf"]
[ext_resource type="PackedScene" uid="uid://b5ka4q4vq1vpx" path="res://Player/player.tscn" id="4_jyern"]

[node name="Main" type="Node"]
script = ExtResource("1_rluci")
mob_scene = ExtResource("2_54lbt")

[node name="World" parent="." instance=ExtResource("3_24duf")]

[node name="Light" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10.4713, 0)
light_energy = 2.137

[node name="Player" parent="." instance=ExtResource("4_jyern")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
